--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-    <script src="/library/p5.js"></script>
-    <script src="/library/p5.dom.min.js"></script>
-    <script src="/library/p5.sound.min.js"></script>
-    <script src="/library/p5.play.js"></script>
+    <script src="library/p5.js"></script>
+    <script src="library/p5.dom.min.js"></script>
+    <script src="library/p5.sound.min.js"></script>
+    <script src="library/p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
